--- a/MadWorld/MadWorld.Website/Shared/MainLayout.razor
+++ b/MadWorld/MadWorld.Website/Shared/MainLayout.razor
@@ -1,17 +1,11 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
+<header>
+    <NavMenu />
+</header>
+<main class="flex-shrink-0 flex-fill">
+    <div class="container mt-3">
+        @Body
     </div>
-
-    <div class="main">
-        <div class="top-row px-4">
-            <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
-        </div>
-
-        <div class="content px-4">
-            @Body
-        </div>
-    </div>
-</div>
+</main>
+<MainFooter />
