--- a/MadWorld/MadWorld.Website/Shared/NavMenu.razor.css
+++ b/MadWorld/MadWorld.Website/Shared/NavMenu.razor.css
@@ -1,62 +1,32 @@
-﻿.navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
+﻿#icon-madworld {
+    height: 50px;
 }
 
-.top-row {
-    height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
+.menubar {
+    background-image: linear-gradient(45deg, rgb(0, 51, 0) 0%, #009900 70%);
 }
 
-.navbar-brand {
-    font-size: 1.1rem;
+.dropdown-menu-custom {
+    background-color: #009900;
 }
 
-.oi {
-    width: 2rem;
-    font-size: 1.1rem;
-    vertical-align: text-top;
-    top: -2px;
-}
-
-.nav-item {
-    font-size: 0.9rem;
-    padding-bottom: 0.5rem;
-}
-
-    .nav-item:first-of-type {
-        padding-top: 1rem;
-    }
-
-    .nav-item:last-of-type {
-        padding-bottom: 1rem;
-    }
-
-    .nav-item ::deep a {
-        color: #d7d7d7;
-        border-radius: 4px;
-        height: 3rem;
-        display: flex;
-        align-items: center;
-        line-height: 3rem;
-    }
-
-.nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.25);
-    color: white;
-}
-
-.nav-item ::deep a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
-
-@media (min-width: 641px) {
-    .navbar-toggler {
+@media all and (min-width: 840px) {
+    .navbar .nav-item .dropdown-menu {
         display: none;
     }
 
-    .collapse {
-        /* Never collapse the sidebar for wide screens */
+    .navbar .nav-item:hover .nav-link {
+    }
+
+    .navbar .nav-item:hover .dropdown-menu {
         display: block;
+    }
+
+    .navbar .nav-item .dropdown-menu {
+        margin-top: 0;
+    }
+
+    .dropdown-menu-tools {
+        width: 200px;
     }
 }
