--- a/MadWorld/MadWorld.Website/Shared/NavMenu.razor
+++ b/MadWorld/MadWorld.Website/Shared/NavMenu.razor
@@ -23,6 +23,19 @@
                         <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
                     </NavLink>
                 </li>
+                <li class="nav-item px-3 dropdown">
+                    <a id="tools-dropdown" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" @onclick="ExpendTools">
+                        <span class="oi oi-chat" aria-hidden="true"></span> Tools
+                    </a>
+                    <div class="dropdown-menu-custom dropdown-menu dropdown-menu-tools @menuToolsExpended" aria-labelledby="tools-dropdown">
+                        <NavLink class="nav-link" href="converter/base64">
+                            <span class="oi oi-loop-circular" aria-hidden="true"></span> Base64 Converter
+                        </NavLink>
+                        <NavLink class="nav-link" href="generator/guid">
+                            <span class="oi oi-plus" aria-hidden="true"></span> Guid Generator
+                        </NavLink>
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
