--- a/MadWorld/MadWorld.Website/Shared/NavMenu.razor
+++ b/MadWorld/MadWorld.Website/Shared/NavMenu.razor
@@ -19,8 +19,8 @@
                     </NavLink>
                 </li>
                 <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="fetchdata">
-                        <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                    <NavLink class="nav-link" href="resume">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Resume
                     </NavLink>
                 </li>
                 <li class="nav-item px-3 dropdown">
