--- a/MadWorld/MadWorld.Website/Shared/NavMenu.razor
+++ b/MadWorld/MadWorld.Website/Shared/NavMenu.razor
@@ -36,6 +36,7 @@
                         </NavLink>
                     </div>
                 </li>
+                <LoginDisplay />
             </ul>
         </div>
     </div>
