--- a/MadWorld/MadWorld.Website/Shared/LoginDisplay.razor
+++ b/MadWorld/MadWorld.Website/Shared/LoginDisplay.razor
@@ -11,6 +11,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="admin">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Admin
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" @onclick="BeginSignOut">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Log out
             </NavLink>
