--- a/MadWorld/MadWorld.Website/Shared/NavMenu.razor
+++ b/MadWorld/MadWorld.Website/Shared/NavMenu.razor
@@ -34,6 +34,9 @@
                         <NavLink class="nav-link" href="generator/guid">
                             <span class="oi oi-plus" aria-hidden="true"></span> Guid Generator
                         </NavLink>
+                        <NavLink class="nav-link" href="validator/XML">
+                            <span class="oi oi-reload" aria-hidden="true"></span> XML Validator
+                        </NavLink>
                     </div>
                 </li>
                 <LoginDisplay />
