Add blob functions

--- a/MadWorld/MadWorld.Website/Pages/Support/ReportBug.razor
+++ b/MadWorld/MadWorld.Website/Pages/Support/ReportBug.razor
@@ -31,36 +31,41 @@ else
         </p>
     </div>
 
-    <div class="mb-3">
-        <label for="fullname" class="form-label">Your fullname</label>
-        <input type="text" class="form-control" id="fullname" @bind="SecurityReport.Fullname">
-    </div>
+    <EditForm Model="@SecurityReport" OnValidSubmit="@SendReport">
+        <DataAnnotationsValidator />
+        <ValidationSummary />
 
-    <div class="mb-3">
-        <label for="email" class="form-label">Your email</label>
-        <input type="email" class="form-control" id="email" @bind="SecurityReport.Email">
-    </div>
+        <div class="mb-3">
+            <label for="fullname" class="form-label">Your fullname</label>
+            <InputText type="text" class="form-control" id="fullname" @bind-Value="SecurityReport.Fullname" />
+        </div>
 
-    <div class="mb-3">
-        <label for="pgp-public-key" class="form-label">Your PGP public key</label>
-        <InputFile class="form-control" type="file" OnChange="AddPgpPublicKey" id="pgp-public-key" />
-    </div>
+        <div class="mb-3">
+            <label for="email" class="form-label">Your email</label>
+            <InputText type="email" class="form-control" id="email" @bind-Value="SecurityReport.Email" />
+        </div>
 
-    <div class="mb-3">
-        <label for="title" class="form-label">Title</label>
-        <input type="text" class="form-control" id="title" @bind="SecurityReport.Title">
-    </div>
+        <div class="mb-3">
+            <label for="pgp-public-key" class="form-label">Your PGP public key</label>
+            <InputFile class="form-control" type="file" OnChange="AddPgpPublicKey" id="pgp-public-key" />
+        </div>
 
-    <div class="mb-3">
-        <label for="description" class="form-label">Description</label>
-        <textarea class="form-control" id="description" @bind="SecurityReport.Description"></textarea>
-    </div>
+        <div class="mb-3">
+            <label for="title" class="form-label">Title</label>
+            <InputText type="text" class="form-control" id="title" @bind-Value="SecurityReport.Title" />
+        </div>
 
-    <div class="mb-3">
-        <label for="attachments" class="form-label">Add attachment for prove</label>
-        <InputFile class="form-control" type="file" OnChange="AddAttachments" id="attachments" multiple />
-    </div>
+        <div class="mb-3">
+            <label for="description" class="form-label">Description</label>
+            <InputTextArea class="form-control" id="description" @bind-Value="SecurityReport.Description" />
+        </div>
 
-    <button type="button" class="btn btn-success" @onclick="SendReport">Send security report</button>
+        <div class="mb-3">
+            <label for="attachments" class="form-label">Add attachment for prove</label>
+            <InputFile class="form-control" type="file" OnChange="AddAttachments" id="attachments" multiple />
+        </div>
+
+        <button type="submit" class="btn btn-success">Send security report</button>
+    </EditForm>
 }
 
