Change page not found text

--- a/MadWorld/MadWorld.Website/App.razor
+++ b/MadWorld/MadWorld.Website/App.razor
@@ -22,7 +22,7 @@
         </Found>
         <NotFound>
             <LayoutView Layout="@typeof(MainLayout)">
-                <p>Sorry, there's nothing at this address.</p>
+                <p>I'm sorry. We couldn't find your page. </p>
             </LayoutView>
         </NotFound>
     </Router>
