Add roles to API

--- a/MadWorld/MadWorld.Website/Pages/Admin/Admin.razor
+++ b/MadWorld/MadWorld.Website/Pages/Admin/Admin.razor
@@ -14,7 +14,7 @@
     {
         try
         {
-            welcomeResponse = await Http.GetFromJsonAsync<WelcomeResponse>("Admin");
+            welcomeResponse = await Http.GetFromJsonAsync<WelcomeResponse>("Admin/GetUsers");
         }
         catch (AccessTokenNotAvailableException exception)
         {
