--- a/MadWorld/MadWorld.Website/Pages/Admin/Users/AllUsers.razor
+++ b/MadWorld/MadWorld.Website/Pages/Admin/Users/AllUsers.razor
@@ -6,6 +6,7 @@
 @using MadWorld.Website.Services.Admin.Interfaces;
 @attribute [Authorize(Roles = "Adminstrator")]
 @inject IUserManagerService _service;
+@inject NavigationManager Navigation;
 
 @if (!string.IsNullOrEmpty(ErrorMessage))
 {
