--- a/MadWorld/MadWorld.Website/Pages/Admin/Users/EditUser.razor
+++ b/MadWorld/MadWorld.Website/Pages/Admin/Users/EditUser.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Admin/EditUser/{ID}"
+@layout AdminLayout
 
 @using Microsoft.AspNetCore.Authorization
 @using MadWorld.Shared.Models.Admin;
