--- a/MadWorld/MadWorld.Website/Shared/LoginDisplay.razor
+++ b/MadWorld/MadWorld.Website/Shared/LoginDisplay.razor
@@ -6,7 +6,7 @@
 <AuthorizeView>
     <Authorized>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="authentication/profile">
+            <NavLink class="nav-link" href="Authentication/Profile">
                 <span class="oi oi-plus" aria-hidden="true"></span> @context.User.Identity.Name!
             </NavLink>
         </li>
@@ -18,7 +18,7 @@
     </Authorized>
     <NotAuthorized>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="authentication/login">
+            <NavLink class="nav-link" href="Authentication/Login">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Log in
             </NavLink>
         </li>
@@ -26,7 +26,7 @@
 </AuthorizeView>
 <AuthorizeView Roles="Adminstrator">
     <li class="nav-item px-3">
-        <NavLink class="nav-link" href="admin">
+        <NavLink class="nav-link" href="Admin">
             <span class="oi oi-list-rich" aria-hidden="true"></span> Admin
         </NavLink>
     </li>
