--- a/MadWorld/MadWorld.Website/Shared/NavMenu.razor
+++ b/MadWorld/MadWorld.Website/Shared/NavMenu.razor
@@ -14,12 +14,12 @@
                     </NavLink>
                 </li>
                 <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="counter">
+                    <NavLink class="nav-link" href="Counter">
                         <span class="oi oi-plus" aria-hidden="true"></span> Counter
                     </NavLink>
                 </li>
                 <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="resume">
+                    <NavLink class="nav-link" href="Resume">
                         <span class="oi oi-list-rich" aria-hidden="true"></span> Resume
                     </NavLink>
                 </li>
@@ -28,16 +28,16 @@
                         <span class="oi oi-chat" aria-hidden="true"></span> Tools
                     </a>
                     <div class="dropdown-menu-custom dropdown-menu dropdown-menu-tools @menuToolsExpended" aria-labelledby="tools-dropdown">
-                        <NavLink class="nav-link" href="converter/base64">
+                        <NavLink class="nav-link" href="Converter/Base64">
                             <span class="oi oi-loop-circular" aria-hidden="true"></span> Base64 Converter
                         </NavLink>
-                        <NavLink class="nav-link" href="generator/guid">
+                        <NavLink class="nav-link" href="Generator/Guid">
                             <span class="oi oi-plus" aria-hidden="true"></span> Guid Generator
                         </NavLink>
-                        <NavLink class="nav-link" href="validator/Regex">
+                        <NavLink class="nav-link" href="Validator/Regex">
                             <span class="oi oi-reload" aria-hidden="true"></span> Regex Validator
                         </NavLink>
-                        <NavLink class="nav-link" href="validator/XML">
+                        <NavLink class="nav-link" href="Validator/XML">
                             <span class="oi oi-reload" aria-hidden="true"></span> XML Validator
                         </NavLink>
                     </div>
