--- a/MadWorld/MadWorld.Website/Shared/NavMenu.razor
+++ b/MadWorld/MadWorld.Website/Shared/NavMenu.razor
@@ -34,6 +34,9 @@
                         <NavLink class="nav-link" href="Generator/Guid">
                             <span class="oi oi-plus" aria-hidden="true"></span> Guid Generator
                         </NavLink>
+                        <NavLink class="nav-link" href="Ipfs">
+                            <span class="oi oi-file" aria-hidden="true"></span> Ipfs Files
+                        </NavLink>
                         <NavLink class="nav-link" href="Validator/Regex">
                             <span class="oi oi-reload" aria-hidden="true"></span> Regex Validator
                         </NavLink>
