--- a/MadWorld/MadWorld.Website/wwwroot/css/app.css
+++ b/MadWorld/MadWorld.Website/wwwroot/css/app.css
@@ -51,6 +51,10 @@ app {
     animation: spin 2s linear infinite;
 }
 
+.mouse-pointer {
+    cursor: pointer;
+}
+
 @keyframes spin {
     0% {
         transform: rotate(0deg);
