--- a/MadWorld/MadWorld.Website/Shared/NavAdminMenu.razor
+++ b/MadWorld/MadWorld.Website/Shared/NavAdminMenu.razor
@@ -15,6 +15,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/Admin/Ipfs/All">
+                <span class="oi oi-file" aria-hidden="true"></span> Ipfs files
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="/Admin/Users">
                 <span class="oi oi-grid-three-up" aria-hidden="true"></span> Accounts
             </NavLink>
