--- a/MadWorld/MadWorld.Website/Shared/MainLayout.razor
+++ b/MadWorld/MadWorld.Website/Shared/MainLayout.razor
@@ -1,5 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
+@using MadWorld.Website.Manager.Interfaces;
+@inject ISmartlookManager _smartlookManager;
+
 <header>
     <Session />
     <NavMenu />
