--- a/MadWorld/MadWorld.Website/Pages/Tools/Running.razor
+++ b/MadWorld/MadWorld.Website/Pages/Tools/Running.razor
@@ -19,12 +19,26 @@
         _audioManager.Play();
     }
 
+    private void Start()
+    {
+        Task.Run(() => RepeatPlaying());
+    }
+
+    private async Task RepeatPlaying()
+    {
+        for (int i = 0; i < 5; i++)
+        {
+            Play();
+            await Task.Delay(5000);
+        }
+    }
+
 }
 
 <div class="card">
     <div class="card-header">
         <button @onclick=(Play)>Play</button>
-
+        <button @onclick=(Start)>Start</button>
     </div>
     <div class="card-body">
          <audio id="@PlayerID" controls><source src="/music/sonar-ping.wav" /></audio>
