--- a/MadWorld/MadWorld.Website/Pages/Tools/Running.razor
+++ b/MadWorld/MadWorld.Website/Pages/Tools/Running.razor
@@ -1,6 +1,6 @@
 ﻿@page "/running"
 
-@using MadWorld.Website.Manager.Interfaces;
+@using MadWorld.Website.JavascriptManager.Interfaces;
 @inject IAudioManager _audioManager;
 
 <h1>Play sound!</h1>
