--- a/MadWorld/MadWorld.Website/Shared/MainLayout.razor
+++ b/MadWorld/MadWorld.Website/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-@using MadWorld.Website.Manager.Interfaces;
+@using MadWorld.Website.JavascriptManager.Interfaces;
 @inject ISmartlookManager _smartlookManager;
 
 <header>
