--- a/MadWorld/MadWorld.Website/Shared/NavMenu.razor
+++ b/MadWorld/MadWorld.Website/Shared/NavMenu.razor
@@ -43,6 +43,9 @@
                         <NavLink class="nav-link" href="Validator/XML">
                             <span class="oi oi-reload" aria-hidden="true"></span> XML Validator
                         </NavLink>
+                        <NavLink class="nav-link" href="Running">
+                            <span class="oi oi-people" aria-hidden="true"></span> Running tool
+                        </NavLink>
                     </div>
                 </li>
                 <LoginDisplay />
