--- a/MadWorld/MadWorld.Website/Shared/NavMenu.razor
+++ b/MadWorld/MadWorld.Website/Shared/NavMenu.razor
@@ -6,7 +6,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
+        <div id="navbarCollapse" class="collapse navbar-collapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
@@ -56,19 +56,7 @@
 
 @code {
 
-    private string menuAccountExpended = string.Empty;
-    private string menuBusinessExpended = string.Empty;
     private string menuToolsExpended = string.Empty;
-
-    private void ExpendAccount()
-    {
-        menuAccountExpended = string.IsNullOrEmpty(menuAccountExpended) ? "show" : string.Empty;
-    }
-
-    private void ExpendBusiness()
-    {
-        menuBusinessExpended = string.IsNullOrEmpty(menuToolsExpended) ? "show" : string.Empty;
-    }
 
     private void ExpendTools()
     {
