--- a/MadWorld/MadWorld.Website/Pages/Tools/Running.razor.css
+++ b/MadWorld/MadWorld.Website/Pages/Tools/Running.razor.css
@@ -26,4 +26,35 @@
     font-size: 48px;
 }
 
+.card-round {
+    border-radius: 5px;
+    -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
+    box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
+    border: none;
+    margin-bottom: 10px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.card-round .card-block-round {
+    padding-top: 15px;
+    padding-left: 15px;
+}
+
+.order-card {
+    color: #fff;
+}
+
+.bg-c-green {
+    background: linear-gradient(45deg,#2ed8b6,#59e0c5);
+}
+
+.bg-c-blue {
+    background: linear-gradient(45deg,#4099ff,#73b4ff);
+}
+
+.bg-c-yellow {
+    background: linear-gradient(45deg,#FFB64D,#ffcb80);
+}
+
 
