--- a/MadWorld/MadWorld.Website/Shared/NavMenu.razor
+++ b/MadWorld/MadWorld.Website/Shared/NavMenu.razor
@@ -40,6 +40,9 @@
                         <NavLink class="nav-link" href="Validator/Regex">
                             <span class="oi oi-reload" aria-hidden="true"></span> Regex Validator
                         </NavLink>
+                        <NavLink class="nav-link" href="Validator/Json">
+                            <span class="oi oi-reload" aria-hidden="true"></span> Json Validator
+                        </NavLink>
                         <NavLink class="nav-link" href="Validator/XML">
                             <span class="oi oi-reload" aria-hidden="true"></span> XML Validator
                         </NavLink>
