--- a/MadWorld/MadWorld.Website/Pages/Tools/Xml.razor
+++ b/MadWorld/MadWorld.Website/Pages/Tools/Xml.razor
@@ -7,7 +7,7 @@
 
 <MonacoEditor @ref="_editor" Id="xml-editor" CssClass="editorXML" ConstructionOptions="EditorConstructionOptions" OnDidInit="EditorOnDidInit" OnContextMenu="OnContextMenu" />
 
-<button type="button" class="btn btn-success" @onclick="FormatXml">Format XML</button>
-<button type="button" class="btn btn-success" @onclick="ValidateXML">Validate XML</button>
+<button type="button" class="btn btn-success" @onclick="FormatBody">Format XML</button>
+<button type="button" class="btn btn-success" @onclick="ValidateBody">Validate XML</button>
 <h3>Result</h3>
 <p>@Result</p>
