--- a/MadWorld/MadWorld.Website/Shared/NavMenu.razor
+++ b/MadWorld/MadWorld.Website/Shared/NavMenu.razor
@@ -40,7 +40,7 @@
                         <NavLink class="nav-link" href="Validator/Regex">
                             <span class="oi oi-reload" aria-hidden="true"></span> Regex Validator
                         </NavLink>
-                        <NavLink class="nav-link" href="Validator/Json">
+                        <NavLink class="nav-link" href="Validator/JSON">
                             <span class="oi oi-reload" aria-hidden="true"></span> Json Validator
                         </NavLink>
                         <NavLink class="nav-link" href="Validator/XML">
