--- a/MadWorld/MadWorld.Website/Shared/NavMenu.razor
+++ b/MadWorld/MadWorld.Website/Shared/NavMenu.razor
@@ -14,28 +14,20 @@
                     </NavLink>
                 </li>
                 <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="Counter">
-                        <span class="oi oi-plus" aria-hidden="true"></span> Counter
-                    </NavLink>
-                </li>
-                <li class="nav-item px-3">
                     <NavLink class="nav-link" href="Resume">
                         <span class="oi oi-list-rich" aria-hidden="true"></span> Resume
                     </NavLink>
                 </li>
                 <li class="nav-item px-3 dropdown">
-                    <a id="tools-dropdown" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" @onclick="ExpendTools">
-                        <span class="oi oi-chat" aria-hidden="true"></span> Tools
+                    <a id="tools-dropdown" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" @onclick="ExpendProgramming">
+                        <span class="oi oi-code" aria-hidden="true"></span> Programming
                     </a>
-                    <div class="dropdown-menu-custom dropdown-menu dropdown-menu-tools @menuToolsExpended" aria-labelledby="tools-dropdown">
+                    <div class="dropdown-menu-custom dropdown-menu dropdown-menu-tools @menuProgrammingExpended" aria-labelledby="tools-dropdown">
                         <NavLink class="nav-link" href="Converter/Base64">
                             <span class="oi oi-loop-circular" aria-hidden="true"></span> Base64 Converter
                         </NavLink>
                         <NavLink class="nav-link" href="Generator/Guid">
                             <span class="oi oi-plus" aria-hidden="true"></span> Guid Generator
-                        </NavLink>
-                        <NavLink class="nav-link" href="Ipfs">
-                            <span class="oi oi-file" aria-hidden="true"></span> Ipfs Files
                         </NavLink>
                         <NavLink class="nav-link" href="Validator/Regex">
                             <span class="oi oi-reload" aria-hidden="true"></span> Regex Validator
@@ -45,6 +37,16 @@
                         </NavLink>
                         <NavLink class="nav-link" href="Validator/XML">
                             <span class="oi oi-reload" aria-hidden="true"></span> XML Validator
+                        </NavLink>
+                    </div>
+                </li>
+                <li class="nav-item px-3 dropdown">
+                    <a id="tools-dropdown" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" @onclick="ExpendTools">
+                        <span class="oi oi-chat" aria-hidden="true"></span> Tools
+                    </a>
+                    <div class="dropdown-menu-custom dropdown-menu dropdown-menu-tools @menuToolsExpended" aria-labelledby="tools-dropdown">
+                        <NavLink class="nav-link" href="Ipfs">
+                            <span class="oi oi-file" aria-hidden="true"></span> Ipfs Files
                         </NavLink>
                         <NavLink class="nav-link" href="Running">
                             <span class="oi oi-people" aria-hidden="true"></span> Running tool
@@ -59,7 +61,13 @@
 
 @code {
 
+    private string menuProgrammingExpended = string.Empty;
     private string menuToolsExpended = string.Empty;
+
+    private void ExpendProgramming()
+    {
+        menuProgrammingExpended = string.IsNullOrEmpty(menuProgrammingExpended) ? "show" : string.Empty;
+    }
 
     private void ExpendTools()
     {
