--- a/MadWorld/MadWorld.Website/Shared/NavMenu.razor
+++ b/MadWorld/MadWorld.Website/Shared/NavMenu.razor
@@ -1,5 +1,4 @@
-﻿<!-- Fixed navbar -->
-<nav class="navbar navbar-expand-md navbar-dark fixed-top menubar">
+﻿<nav class="navbar navbar-expand-md navbar-dark fixed-top menubar">
     <div class="container-fluid">
         <img id="icon-madworld" src="images/icons/RieMasudaIcon.png" />
         <a class="navbar-brand" href="/">Mad-World</a>
