--- a/MadWorld/MadWorld.Website/Pages/Tools/Running.razor
+++ b/MadWorld/MadWorld.Website/Pages/Tools/Running.razor
@@ -16,6 +16,7 @@
         <button type="button" class="btn btn-success" @onclick=(AddWalk)>Add Walk</button>
         <button type="button" class="btn btn-success" @onclick=(Test)>Test Sound</button>
         <button type="button" class="btn btn-success" @onclick=(SaveScheme)>Save Scheme</button>
+        <button type="button" class="btn btn-success" @onclick=(LoadScheme)>Load Scheme</button>
         <button type="button" class="btn btn-success" @onclick=(Start)>Start Run</button>
     </div>
     }
