--- a/MadWorld/MadWorld.Website/Pages/Admin/Admin.razor
+++ b/MadWorld/MadWorld.Website/Pages/Admin/Admin.razor
@@ -3,7 +3,7 @@
 
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
-@using MadWorld.Shared.Models.Admin
+@using MadWorld.Shared.Web.Models.Admin
 @using MadWorld.Website.Settings;
 @attribute [Authorize(Roles = "Adminstrator")]
 @inject IHttpClientFactory clientFactory
