--- a/MadWorld/MadWorld.Website/Pages/Admin/IPFS/AllIpfs.razor
+++ b/MadWorld/MadWorld.Website/Pages/Admin/IPFS/AllIpfs.razor
@@ -3,7 +3,7 @@
 
 @using BlazorTable;
 @using Microsoft.AspNetCore.Authorization;
-@using MadWorld.Shared.Models.Admin.IPFS;
+@using MadWorld.Shared.Web.Models.Admin.IPFS;
 @using MadWorld.Website.Services.Admin.Interfaces;
 @attribute [Authorize(Roles = "Adminstrator")]
 @inject IIpfsManagerService _service;
