--- a/MadWorld/MadWorld.Website/Pages/Support/FirstTime.razor
+++ b/MadWorld/MadWorld.Website/Pages/Support/FirstTime.razor
@@ -1,6 +1,6 @@
 ﻿@page "/Support/FirstTime"
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
-@using MadWorld.Shared.Models
+@using MadWorld.Shared.Web.Models
 @using MadWorld.Website.Settings;
 @inject IHttpClientFactory clientFactory
 @inject NavigationManager Navigation;
