--- a/MadWorld/MadWorld.Website/Pages/Tools/Ipfs.razor
+++ b/MadWorld/MadWorld.Website/Pages/Tools/Ipfs.razor
@@ -2,7 +2,7 @@
 
 @using BlazorDownloadFile;
 @using BlazorTable;
-@using MadWorld.Shared.Models.IPFS;
+@using MadWorld.Shared.Web.Models.IPFS;
 @using MadWorld.Website.Services.Interfaces;
 @inject IBlazorDownloadFileService _blazorDownloadFileService;
 @inject IIpfsService _service;
