--- a/MadWorld/MadWorld.Website/Pages/Admin/Users/AllUsers.razor
+++ b/MadWorld/MadWorld.Website/Pages/Admin/Users/AllUsers.razor
@@ -3,7 +3,7 @@
 
 @using BlazorTable;
 @using Microsoft.AspNetCore.Authorization
-@using MadWorld.Shared.Models.Admin;
+@using MadWorld.Shared.Web.Models.Admin;
 @using MadWorld.Website.Services.Admin.Interfaces;
 @attribute [Authorize(Roles = "Adminstrator")]
 @inject IUserManagerService _service;
