--- a/MadWorld/MadWorld.Website/Pages/Tools/Running.razor
+++ b/MadWorld/MadWorld.Website/Pages/Tools/Running.razor
@@ -1,7 +1,7 @@
 ﻿@page "/running"
 
 @using Blazored.LocalStorage;
-@using MadWorld.Website.Manager.Interfaces;
+@using MadWorld.Shared.Client.Manager.Running.Interfaces;
 @inject ILocalStorageService _localStorage;
 @inject IRunningManager _manager;
 
