--- a/MadWorld/MadWorld.Website/Pages/Tools/Running.razor
+++ b/MadWorld/MadWorld.Website/Pages/Tools/Running.razor
@@ -3,7 +3,7 @@
 @using Blazored.LocalStorage;
 @using MadWorld.Shared.Client.Manager.Running.Interfaces;
 @inject ILocalStorageService _localStorage;
-@inject IRunningManager _manager;
+@inject IRunningBuilder _builder;
 
 <h1>Running tool!</h1>
 
